--- a/index.html
+++ b/index.html
@@ -1,1 +1,190 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PDS Dance Studio | Prince Rajeev</title>
 
+<meta name="description" content="Best Dance Classes in Noida Sector 11. Wedding choreography, Bollywood, Kids Dance & Corporate training by Prince Rajeev.">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+:root {
+--primary:#ff3e6c;
+--dark:#111;
+--light:#fff;
+}
+
+*{margin:0;padding:0;box-sizing:border-box;}
+body{font-family:'Poppins',sans-serif;}
+
+nav{
+background:#000;
+padding:15px 8%;
+display:flex;
+justify-content:space-between;
+align-items:center;
+position:sticky;
+top:0;
+z-index:1000;
+}
+
+.logo{color:var(--primary);font-weight:700;font-size:20px;}
+nav ul{list-style:none;display:flex;}
+nav ul li{margin-left:20px;}
+nav ul li a{color:#fff;text-decoration:none;font-size:14px;}
+
+.hero{
+height:90vh;
+background:linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
+url('https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?auto=format&fit=crop&q=80');
+background-size:cover;
+background-position:center;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+text-align:center;
+color:#fff;
+padding:20px;
+}
+
+.hero h1{font-size:48px;margin-bottom:10px;}
+.hero p{max-width:600px;margin-bottom:20px;}
+
+.btn{
+background:var(--primary);
+color:#fff;
+padding:12px 25px;
+text-decoration:none;
+border-radius:30px;
+font-weight:600;
+display:inline-block;
+}
+
+section{padding:70px 10%;}
+
+.section-title{text-align:center;margin-bottom:40px;}
+.section-title h2{font-size:30px;}
+.underline{width:60px;height:4px;background:var(--primary);margin:10px auto;}
+
+.grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:20px;
+}
+
+.card{
+background:#f5f5f5;
+padding:25px;
+border-radius:15px;
+text-align:center;
+}
+
+.special{
+background:#111;
+color:#fff;
+border-radius:20px;
+padding:40px;
+}
+
+.cta{
+background:var(--primary);
+color:#fff;
+text-align:center;
+padding:50px 20px;
+}
+
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:30px;
+}
+
+.whatsapp{
+position:fixed;
+bottom:20px;
+right:20px;
+background:#25D366;
+color:#fff;
+padding:15px;
+border-radius:50%;
+text-decoration:none;
+font-size:20px;
+}
+</style>
+</head>
+
+<body>
+
+<nav>
+<div class="logo">PDS DANCE STUDIO</div>
+<ul>
+<li><a href="#home">Home</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#styles">Styles</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
+</nav>
+
+<section class="hero" id="home">
+<h1>PRINCE RAJEEV</h1>
+<p>Turning simple steps into powerful performances. Learn dance with confidence, energy and fun.</p>
+<a href="https://wa.me/9315054265" class="btn">Join a Batch</a>
+</section>
+
+<section id="about">
+<div class="section-title">
+<h2>About Instructor</h2>
+<div class="underline"></div>
+</div>
+<p style="text-align:center;max-width:700px;margin:auto;">
+Hi, I am <strong>Prince Rajeev</strong>, professional dance instructor at PDS Dance Studio, Noida Sector 11. I make dance easy and enjoyable even for beginners.
+</p>
+</section>
+
+<section id="styles" style="background:#f5f5f5;">
+<div class="section-title">
+<h2>Dance Styles</h2>
+<div class="underline"></div>
+</div>
+
+<div class="grid">
+<div class="card"><h3>Bollywood</h3><p>High energy commercial dance.</p></div>
+<div class="card"><h3>Freestyle</h3><p>Express without limits.</p></div>
+<div class="card"><h3>Semi-Classical</h3><p>Grace with modern beats.</p></div>
+<div class="card"><h3>Kids Dance</h3><p>Confidence building classes.</p></div>
+</div>
+</section>
+
+<section class="special">
+<h2 style="color:#ff3e6c;">Wedding Choreography</h2>
+<p>Bride Solo | Couple Dance | Family Group | Sangeet Special</p>
+</section>
+
+<section class="cta">
+<h2>Limited Seats Available!</h2>
+<p>Join Now and Start Your Dance Journey Today.</p>
+<a href="https://wa.me/9315054265" class="btn" style="background:#fff;color:#ff3e6c;">Enroll Now</a>
+</section>
+
+<section id="contact">
+<div class="section-title">
+<h2>Contact</h2>
+<div class="underline"></div>
+</div>
+<p><strong>Location:</strong> Noida Sector 11</p>
+<p><strong>Phone:</strong> 9315054265</p>
+<p><strong>Email:</strong> dearrajeev596@gmail.com</p>
+</section>
+
+<footer>
+<p>© 2026 PDS Dance Studio | Prince Rajeev</p>
+</footer>
+
+<a href="https://wa.me/9315054265" class="whatsapp">💬</a>
+
+</body>
+</html>
